# teach_this_page

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
app/: __init__.py  capture.py  config.py  main.py  models.py  pipeline.py  prefs.py  pricing.py  proc.py  tts.py
app/llm/: __init__.py  base.py  chat.py  claude.py  claude_code.py  codex.py  ollama.py  openai_compat.py  vision.py
app/static/: index.html  player.js  style.css
docs/: commercialization.md  electron-kickoff.md
scripts/: launch-chrome.sh
